# dads_money

./: .gitignore  .pre-commit-config.yaml  AGENT_RULES.md  BUILDING.md  CLAUDE.md  CURRENCY_GUIDE.md  IMPLEMENTATION.md  INSTALL.md  LICENSE  Makefile  QUICKSTART.md  README.md  TESTING.md  build_installer.sh  build_macos.spec  coverage.xml  demo.py  entitlements.plist  launch.sh  mypy.ini  pyproject.toml  run.py  test_settings.py
.github/workflows/: ci.yml
src/dads_money/: __init__.py  app.py  config.py  io_csv.py  io_ofx.py  io_qif.py  models.py  services.py  settings.py  storage.py  ui.py
src/dads_money/ui_views/: __init__.py  account_dialogs.py  account_summary_dialog.py  investment_dialogs.py  investment_panel.py  main_window.py  manage_dialogs.py  settings_dialog.py  tax_report_dialog.py
tests/: __init__.py  conftest.py  test_config.py  test_csv_extended.py  test_investment_models.py  test_investment_services.py  test_io_ofx.py  test_models.py  test_qif_extended.py  test_services.py  test_settings.py  test_storage.py
tests/integration/: __init__.py  test_csv_roundtrip.py  test_investment_roundtrip.py  test_qif_roundtrip.py  test_storage_integration.py
