[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dads-money"
version = "0.1.0"
description = "Microsoft Money 3.0 compatible personal finance application"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Paul", email = "paul@example.com"}
]
dependencies = [
    "PySide6>=6.6.0",
    "ofxparse>=0.21",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "black>=23.0.0",
]

[project.scripts]
dads-money = "dads_money.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]
